<resources>
    <string name="app_name">Gestor Merenda</string>
    <string name="selecionar_pedido">Quero</string>
    <string name="view_titulo">Título</string>
    <string name="view_descricao">Descrição</string>
    <string name="view_cadastrar">Cadastrar</string>
    <string name="select">Hórario</string>
    <string name="edit_username"></string>
    <string name="edit_email"></string>
    <string name="edit_password"></string>
    <string name="bt_entrar">Entrar</string>
    <string name="title_register">Cadastrar</string>
    <string name="title_login">Login</string>
    <string name="text_snack">Merenda</string>
    <string name="text_morning">Cedo</string>
    <string name="text_afternoon">Manhã</string>
    <string name="text_pre_afternoon">Tarde</string>
    <string name="text_morningsnack">Lanche da Manhã</string>
    <string name="text_lunch">Almoço</string>
    <string name="text_pre_afternoonsnack">Lanche da Tarde</string>


    <string-array name="Horario">

        <item>Café da Manhã</item>
        <item>Almoço</item>
        <item>Almoço da Tarde</item>

    </string-array>
</resources>
