<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C80000">

    <include layout="@layout/merenda_toolbar_notadd" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/menu_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="144dp"
        android:text="@string/title_login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toTopOf="@+id/loginToolbar" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="Email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailFields"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar" />

    <EditText
        android:id="@+id/emailFields"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColorHint="@color/black"
        android:layout_marginStart="69dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_gestao"
        android:ems="12"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toTopOf="@+id/loginToolbar" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:text="Senha"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordFields"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar" />

    <EditText
        android:id="@+id/passwordFields"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gestao"
        android:ems="12"
        android:hint="@string/edit_username"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/emailFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_gestao"
        android:text="@string/bt_entrar"
        app:layout_constraintStart_toStartOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/passwordFields" />

</androidx.constraintlayout.widget.ConstraintLayout>