<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    android:background="@color/red"-->
<!--    android:paddingBottom="600dp"-->
<!--    android:layout_margin="20px"-->
<!--    android:paddingLeft="10dp"-->
<!--    android:paddingRight="10dp"-->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/navbartoolbar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:background="#ffffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="405dp"
        android:layout_height="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="65dp"
        android:background="#75000000"
        android:backgroundTint="@color/gray"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_early"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_timetable"
        android:backgroundTint="#0DFFFFFF"
        android:text="@string/text_morning"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="2dp"
        android:layout_height="52dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="67dp"
        android:background="#75000000"
        android:backgroundTint="@color/gray"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_morning"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="137.50dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_timetable"
        android:backgroundTint="#0DFFFFFF"
        android:text="@string/text_afternoon"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="2dp"
        android:layout_height="52dp"
        android:layout_marginLeft="272.60dp"
        android:layout_marginTop="67dp"
        android:background="#72000000"
        android:backgroundTint="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_afternoon"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_timetable"
        android:backgroundTint="#0DFFFFFF"
        android:text="@string/text_pre_afternoon"
        android:textColor="@color/black"
        android:textSize="15dp" />

    </RelativeLayout>
</RelativeLayout>
