<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#C80000"
    tools:context=".Cadastro">

    <include layout="@layout/merenda_toolbar_notadd" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/menu_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:text="@string/title_register"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintTop_toTopOf="@+id/loginToolbar" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="8dp"
        android:text="Usuário"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_nome"
        app:layout_constraintEnd_toEndOf="@+id/edit_nome" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_gestao"
        android:ems="12"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="8dp"
        android:text="Email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button_gestao"
        android:ems="12"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

    <TextView
        android:id="@+id/txtsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="8dp"
        android:text="Senha"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_senha"
        app:layout_constraintEnd_toEndOf="@+id/edit_senha" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_gestao"
        android:ems="12"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="152dp"
        android:background="@drawable/button_gestao"
        android:text="@string/title_register"
        app:layout_constraintEnd_toEndOf="@+id/loginToolbar"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>
