<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="45dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="150dp"
        android:paddingLeft="22dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menuToolbar1"
            android:layout_width="172dp"
            android:layout_height="235dp"
            android:background="@drawable/menu_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/menuToolbar1"
            android:layout_alignEnd="@+id/menuToolbar1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/chocolate"
            app:layout_constraintEnd_toEndOf="@+id/menuToolbar1"
            app:layout_constraintStart_toStartOf="@+id/menuToolbar1"
            app:layout_constraintTop_toTopOf="@+id/menuToolbar1"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="468dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_titulo"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="568dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/view_descricao"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="596dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_pedido"
            android:text="@string/selecionar_pedido"
            android:textColor="@color/white"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="638dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="150dp"
        android:paddingLeft="222dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menuToolbar2"
            android:layout_width="172dp"
            android:layout_height="235dp"
            android:background="@drawable/menu_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/menuToolbar2"
            android:layout_alignEnd="@+id/menuToolbar2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/bananaarma"
            app:layout_constraintEnd_toEndOf="@+id/menuToolbar2"
            app:layout_constraintStart_toStartOf="@+id/menuToolbar2"
            app:layout_constraintTop_toTopOf="@+id/menuToolbar2"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="468dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_titulo"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="568dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/view_descricao"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="596dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_pedido"
            android:text="@string/selecionar_pedido"
            android:textColor="@color/white"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="638dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="450dp"
        android:paddingLeft="22dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menuToolbar3"
            android:layout_width="172dp"
            android:layout_height="235dp"
            android:background="@drawable/menu_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/menuToolbar3"
            android:layout_alignEnd="@+id/menuToolbar3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/peoplewithstrong"
            app:layout_constraintEnd_toEndOf="@+id/menuToolbar3"
            app:layout_constraintStart_toStartOf="@+id/menuToolbar3"
            app:layout_constraintTop_toTopOf="@+id/menuToolbar3"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="468dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_titulo"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="568dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/view_descricao"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="596dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_pedido"
            android:text="@string/selecionar_pedido"
            android:textColor="@color/white"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="638dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="450dp"
        android:paddingLeft="222dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menuToolbar4"
            android:layout_width="172dp"
            android:layout_height="235dp"
            android:background="@drawable/menu_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateIds" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/menuToolbar4"
            android:layout_alignEnd="@+id/menuToolbar4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:src="@drawable/comidareal"
            app:layout_constraintEnd_toEndOf="@+id/menuToolbar4"
            app:layout_constraintStart_toStartOf="@+id/menuToolbar4"
            app:layout_constraintTop_toTopOf="@+id/menuToolbar4"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="468dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/view_titulo"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="568dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/view_descricao"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="596dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_pedido"
            android:text="@string/selecionar_pedido"
            android:textColor="@color/white"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="638dp" />
    </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>